--- a/app_gestao/.env.example
+++ b/app_gestao/.env.example
@@ -20,6 +20,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
+DB_DATABASE=C:/Users/aerlon.alves/Documents/app_gestao_vs11/app_gestao/database/database.sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
