--- a/app_gestao/.env.example
+++ b/app_gestao/.env.example
@@ -19,13 +19,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=C:/Users/aerlon.alves/Documents/app_gestao_vs11/app_gestao/database/database.sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_CONNECTION=sqlite
+# DB_DATABASE=C:/Users/aerlon.alves/Documents/app_gestao_vs11/app_gestao/database/database.sqlite
+
+DB_CONNECTION=sqlsrv
+DB_HOST=db
+DB_PORT=1433
+DB_DATABASE=Projeto_DB  # Altere isso para o nome do seu banco de dados
+DB_USERNAME=sa
+DB_PASSWORD=Betgox331
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
