--- a/app_gestao/docker-compose.yml
+++ b/app_gestao/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   db:
     image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
-      SA_PASSWORD: "YourStrong@Passw0rd"
+      SA_PASSWORD: "Betgox331"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
