--- a/app_gestao/.env.example
+++ b/app_gestao/.env.example
@@ -25,7 +25,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlsrv
 DB_HOST=db
 DB_PORT=1433
-DB_DATABASE=Projeto_DB  # Altere isso para o nome do seu banco de dados
+DB_DATABASE=Projeto_DB
 DB_USERNAME=sa
 DB_PASSWORD=Betgox331
 
