--- a/app_gestao/Dockerfile
+++ b/app_gestao/Dockerfile
@@ -1,11 +1,22 @@
 # Use a imagem oficial do PHP
-FROM php:8.1-fpm
+FROM php:8.2-fpm
 
 # Instale dependências do sistema
-RUN apt-get update && apt-get install -y libzip-dev unzip
+RUN apt-get update && apt-get install -y \
+    libzip-dev \
+    unzip \
+    unixodbc-dev \
+    gcc \
+    g++ \
+    make \
+    && apt-get clean
 
 # Instale extensões PHP
 RUN docker-php-ext-install zip pdo pdo_mysql
+
+# Instale a extensão pdo_sqlsrv via PECL
+RUN pecl install pdo_sqlsrv \
+    && docker-php-ext-enable pdo_sqlsrv
 
 # Instale o Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
