--- a/app_gestao/Dockerfile
+++ b/app_gestao/Dockerfile
@@ -9,7 +9,15 @@ RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     make \
+    curl \
+    gnupg \
     && apt-get clean
+
+# Adicione o repositório do Microsoft ODBC Driver
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+    && curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list \
+    && apt-get update \
+    && ACCEPT_EULA=Y apt-get install -y msodbcsql17
 
 # Instale extensões PHP
 RUN docker-php-ext-install zip pdo pdo_mysql
