--- a/app_gestao/.env.example
+++ b/app_gestao/.env.example
@@ -22,12 +22,12 @@ LOG_LEVEL=debug
 # DB_CONNECTION=sqlite
 # DB_DATABASE=C:/Users/aerlon.alves/Documents/app_gestao_vs11/app_gestao/database/database.sqlite
 
-DB_CONNECTION=sqlsrv
-DB_HOST=db
-DB_PORT=1433
-DB_DATABASE=Projeto_DB
-DB_USERNAME=sa
-DB_PASSWORD=Betgox331
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=sg
+DB_USERNAME=root
+DB_PASSWORD=2603
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
