--- a/app_gestao/.env.example
+++ b/app_gestao/.env.example
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 # DB_DATABASE=C:/Users/aerlon.alves/Documents/app_gestao_vs11/app_gestao/database/database.sqlite
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=sg
 DB_USERNAME=root
