--- a/app_gestao/docker-compose.yml
+++ b/app_gestao/docker-compose.yml
@@ -1,3 +1,28 @@
+# services:
+#   app:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     volumes:
+#       - .:/var/www
+#     ports:
+#       - "9001:9000"
+#       - "8000:8000"
+  
+#   db:
+#     image: mcr.microsoft.com/mssql/server:2019-latest
+#     environment:
+#       SA_PASSWORD: "Betgox331"
+#       ACCEPT_EULA: "Y"
+#     ports:
+#       - "1433:1433"
+#     volumes:
+#       - db_data:/var/opt/mssql
+
+# volumes:
+#   db_data:
+
+
 services:
   app:
     build:
@@ -8,16 +33,19 @@ services:
     ports:
       - "9001:9000"
       - "8000:8000"
-  
+    depends_on:
+      - db
+
   db:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    image: mysql:8.0
     environment:
-      SA_PASSWORD: "Betgox331"
-      ACCEPT_EULA: "Y"
+      MYSQL_ROOT_PASSWORD: 2603
+      MYSQL_DATABASE: sg
     ports:
-      - "1433:1433"
+      - "3306:3306"
     volumes:
-      - db_data:/var/opt/mssql
+      - db_data:/var/lib/mysql
 
 volumes:
   db_data:
+
