--- a/app_gestao/docker-compose.yml
+++ b/app_gestao/docker-compose.yml
@@ -23,6 +23,33 @@
 #   db_data:
 
 
+# services:
+#   app:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     volumes:
+#       - .:/var/www
+#     ports:
+#       - "9001:9000"
+#       - "8000:8000"
+#     depends_on:
+#       - db
+
+#   db:
+#     image: mysql:8.0
+#     environment:
+#       MYSQL_ROOT_PASSWORD: 2603
+#       MYSQL_DATABASE: sg
+#     ports:
+#       - "3306:3306"
+#     volumes:
+#       - db_data:/var/lib/mysql
+
+# volumes:
+#   db_data:
+
+
 services:
   app:
     build:
@@ -35,6 +62,8 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    networks:
+      - app_network
 
   db:
     image: mysql:8.0
@@ -45,7 +74,11 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - app_network
 
 volumes:
   db_data:
 
+networks:
+  app_network:
