--- a/app_gestao/docker-compose.yml
+++ b/app_gestao/docker-compose.yml
@@ -61,21 +61,36 @@ services:
       - "9001:9000"
       - "8000:8000"
     depends_on:
-      - db
+      - sqlserver
     networks:
       - app_network
 
-  db:
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: 2603
-      MYSQL_DATABASE: sg
+  sqlserver:
+    container_name: sqlserver-desenv
+    image: mcr.microsoft.com/mssql/server:2019-latest    
     ports:
-      - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
+      - "1433:1433"
+    environment:
+      SA_PASSWORD: "!Betgox331"
+      ACCEPT_EULA: "Y"
     networks:
       - app_network
+
+
+
+  # db:
+  #   image: mysql:8.0
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: 2603
+  #     MYSQL_DATABASE: sg
+  #   ports:
+  #     - "3306:3306"
+  #   volumes:
+  #     - db_data:/var/lib/mysql
+  #   networks:
+  #     - app_network
+
+  
 
 volumes:
   db_data:
